alteracoes nas imagens do index

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ function MM_swapImage() { //v3.0
       <table width="835" border="0" cellpadding="0" cellspacing="1">
         <tr>
           <td width="140"><a href="emitirnfe.html" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image16','','imagens/botoes/nota2.png',1)"><img src="imagens/botoes/nota1.png" name="Image16" width="140" height="47" id="Image16"></a></td>
-          <td width="140"><a href="impressao.html" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','imagens/botoes/impressao2.png',1)"><img src="imagens/botoes/impressao.png" name="Image4" width="140" height="47" id="Image4"></a></td>
-          <td width="140"><a href="cadastroproduto.html" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image8','','imagens/botoes/produto2.png',1)"><img src="imagens/botoes/produto1.png" name="Image8" width="140" height="47" id="Image8"></a></td>
+          <td width="140"><a href="" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image17','','imagens/botoes/embranco2.png',1)"><img src="imagens/botoes/embranco1.png" name="Image17" width="140" height="47" id="Image17"></a></td>
+          <td width="140"><a href="" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image18','','imagens/botoes/embranco2.png',1)"><img src="imagens/botoes/embranco1.png" name="Image18" width="140" height="47" id="Image18"></a></td>
           
-          <td width="140"><a href="cadastrocliente.html" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','imagens/botoes/cliente2.png',1)"><img src="imagens/botoes/cliente1.png" name="Image5" width="140" height="47" id="Image5"></a></td>
-          <td width="140"><a href="cadastrofornecedor.html" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image6','','imagens/botoes/fornecedor2.png',1)"><img src="imagens/botoes/fornecedor1.png" name="Image6" width="140" height="47" id="Image6"></a></td>
-          <td width="139"><a href="cadastrovendedor.html" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image7','','imagens/botoes/vendedor2.png',1)"><img src="imagens/botoes/vendedor1.png" name="Image7" width="140" height="47" id="Image7"></a></td>
+          <td width="140"><a href="" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image19','','imagens/botoes/embranco2.png',1)"><img src="imagens/botoes/embranco1.png" name="Image19" width="140" height="47" id="Image19"></a></td>
+          <td width="140"><a href="" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image21','','imagens/botoes/embranco2.png',1)"><img src="imagens/botoes/embranco1.png" name="Image21" width="140" height="47" id="Image21"></a></td>
+          <td width="139"><a href="" target="centro" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image22','','imagens/botoes/embranco2.png',1)"><img src="imagens/botoes/embranco1.png" name="Image22" width="140" height="47" id="Image22"></a></td>
         </tr>
       </table>
     </div>
